--- a/index.html
+++ b/index.html
@@ -143,19 +143,19 @@ svg#ctrl {
 /* Shoulders */
 .shoulder-btn { cursor: pointer; transition: filter 0.07s; }
 .shoulder-btn:hover { filter: brightness(1.3); }
-.shoulder-btn.active { filter: brightness(2.2) drop-shadow(0 0 10px #00bfff); }
+.shoulder-btn.active { filter: brightness(2.5) drop-shadow(0 0 12px #00bfff) !important; }
 .sb-fill { fill: url(#sbGrad); }
 .sb-label { fill: rgba(255,255,255,0.65); font-size: 10px; text-anchor: middle; dominant-baseline: central; font-family: 'Orbitron'; font-weight: 700; pointer-events: none; }
 
 /* Triggers */
 .trigger-btn { cursor: pointer; transition: filter 0.07s; }
-.trigger-btn.active { filter: brightness(2.0) drop-shadow(0 0 12px #9b59ff); }
+.trigger-btn.active { filter: brightness(2.5) drop-shadow(0 0 14px #9b59ff) !important; }
 .trig-fill { fill: url(#trigGrad); }
 .trig-label { fill: rgba(255,255,255,0.55); font-size: 10px; text-anchor: middle; dominant-baseline: central; font-family: 'Orbitron'; font-weight: 700; pointer-events: none; }
 
 /* D-Pad */
 .dpad-arm { cursor: pointer; transition: filter 0.07s; }
-.dpad-arm.active { filter: brightness(2.5) drop-shadow(0 0 8px #ffd700); }
+.dpad-arm.active { filter: brightness(3.0) drop-shadow(0 0 10px #ffd700) !important; }
 .dp-fill   { fill: url(#dpGrad); }
 .dp-center { fill: #0f0f1e; }
 .dp-arrow  { fill: rgba(255,255,255,0.4); pointer-events: none; }
@@ -170,14 +170,14 @@ svg#ctrl {
 
 /* Mini buttons */
 .mini-btn { cursor: pointer; transition: filter 0.07s; }
-.mini-btn.active { filter: brightness(2.5) drop-shadow(0 0 8px var(--glow-blue)); }
+.mini-btn.active { filter: brightness(3.0) drop-shadow(0 0 10px var(--glow-blue)) !important; }
 .mini-fill { fill: url(#miniGrad); }
 .mini-label { fill: rgba(255,255,255,0.5); font-size: 8px; text-anchor: middle; dominant-baseline: central; font-family: 'Orbitron'; font-weight: 700; pointer-events: none; }
 
 /* PS button */
 .ps-group { cursor: pointer; transition: filter 0.07s; }
 .ps-group:hover { filter: brightness(1.3); }
-.ps-group.active { filter: brightness(3.0) drop-shadow(0 0 16px #4488ff); }
+.ps-group.active { filter: brightness(3.5) drop-shadow(0 0 18px #4488ff) !important; }
 .ps-fill  { fill: url(#psGrad); }
 .ps-label { fill: rgba(255,255,255,0.75); font-size: 11px; text-anchor: middle; dominant-baseline: central; font-family: 'Orbitron'; font-weight: 900; pointer-events: none; }
 
@@ -623,7 +623,15 @@ function loop() {
     const was = prev[b.i] || false;
     const el = document.getElementById(b.svg);
     if (pressed !== was) {
-      if (el) el.classList.toggle('active', pressed);
+      if (el) {
+        el.classList.toggle('active', pressed);
+        // Debug: log element info
+        if (pressed && (b.i >= 4 && b.i <= 17)) {
+          console.log(`Button ${b.name} - Element:`, el, 'Classes:', el.classList.toString());
+        }
+      } else {
+        console.warn(`Element not found for button: ${b.svg}`);
+      }
       log(pressed ? 'p' : 'r', b.name + (pressed ? ' ▼' : ' ▲'));
       prev[b.i] = pressed;
     }
